add error message

--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
               and our launch deals.
             </p>
           </div>
-          <form>
-            <input type="email" placeholder="Email Address" />
+          <form id="form" class="form">
+            <input type="text" id="email" placeholder="Email Address" />
+            <small>Error Message</small>
             <button>
               <img class="submit-arrow" src="/images/icon-arrow.svg" alt="" />
             </button>
