email input fix

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </p>
           </div>
           <form id="form" class="form">
-            <input type="text" id="email-input" placeholder="Email Address" />
+            <input type="email" id="email-input" placeholder="Email Address" />
             <div class="email-error">
               <img id="error-img" src="./images/icon-error.svg" alt="" />
             </div>
